Adicionadas validações de Atlas, Categorias e Disciplinas e o nome da disciplina agora é único

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8,6 +8,10 @@ div.container {
     text-align: start;
 }
 
+input[name='nome'] {
+    text-transform: capitalize;
+}
+
 /* Remover o espaçamento da navbar */
 nav.navbar {
     padding: 0;
