--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12,6 +12,10 @@ input[name='nome'] {
     text-transform: capitalize;
 }
 
+input[name='nome']::placeholder {
+    text-transform: initial;
+}
+
 /* Remover o espaçamento da navbar */
 nav.navbar {
     padding: 0;
