--- a/public/css/app.css
+++ b/public/css/app.css
@@ -211,6 +211,16 @@ a:hover.page-link {
 
 
 /* Sidebar da esquerda */
+#paginasAtlas {
+    padding: 0 0 0 1.5em; 
+}
+
+#paginasAtlas a {
+    overflow:hidden; 
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
 #leftSidebar.show {
     height: 100%;
     width: 270px;
