--- a/public/css/app.css
+++ b/public/css/app.css
@@ -248,25 +248,68 @@ a:hover.page-link {
     display: flex; 
     justify-content:space-around; 
     padding:0;
-  }
+}
 
-  .material-group.header {
-      padding: 1rem;
-  }
+.material-group.header {
+    padding: 1rem;
+}
   
-  .material-item {
+.material-item {
     color: #555;
     text-decoration: none;
     text-align: center;
     background-color: transparent;
     width: 50%;
     padding: 1rem;
-  }
+}
   
-  .material-item:hover {
+.material-item:hover {
     color: #000;
     text-decoration: none;
     background-color: #eee;
-  }
+}
   
-  /* fim de lista de materiais */
+/* fim de lista de materiais */
+
+
+/* carrosel de postagens */
+
+.carousel-item {
+    position: relative;
+    height: 400px;
+}
+
+.carousel-item img {
+    position: absolute;
+}
+
+.carousel-item a.carousel-caption {
+    position: absolute;
+    right: 0%;
+    bottom: 0;
+    left: 0%;
+    padding: 2em;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff;
+}
+
+.carousel-item a:hover.carousel-caption {
+    text-decoration: none;
+    background-color: rgba(0, 0, 0, 0.6);
+    transition: background-color 250ms ease-in-out;
+}
+
+.carousel-control-next span, .carousel-control-prev span{
+    padding: 1rem;
+    background-color: rgba(0,0,0,0.8);
+}
+/* fim de carrosel de postagens */
+
+/* pagina de postagem */
+article .text {
+    text-align: justify;
+}
+
+article .text-footer {
+    font-size: 1rem;
+}
