--- a/public/css/app.css
+++ b/public/css/app.css
@@ -244,30 +244,42 @@ a:hover.page-link {
 /* Sidebar da esquerda */
 
 /* inicio de lista de materiais */
-.list-group-item.material-group {
+.material-group.list-group-item.list-group-item-action {
     display: flex; 
     justify-content:space-around; 
     padding:0;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
 }
 
-.material-group.header {
+.material-group.list-group-item.list-group-item-action.header {
     padding: 1rem;
 }
-  
-.material-item {
+
+.item {
+    display: block;
     color: #555;
     text-decoration: none;
     text-align: center;
     background-color: transparent;
-    width: 50%;
+    border: none;
     padding: 1rem;
 }
-  
-.material-item:hover {
+
+.item:hover {
     color: #000;
     text-decoration: none;
     background-color: #eee;
 }
+  
+.material-item {
+    width: 50%;
+}
+ 
+.atla-item {
+    width: 100%;
+}
+
   
 /* fim de lista de materiais */
 
