--- a/public/css/app.css
+++ b/public/css/app.css
@@ -345,18 +345,19 @@ section {
 
 section .section-title {
     text-align: center;
-    color: rgb(0,200,83);
     margin-bottom: 50px;
     text-transform: uppercase;
 }
 #footer {
-    background: #28a745 !important;
+    background: #28a745;
 }
+
 #footer p{
     color: #ffffff;
-    text-decoration: none !important;
+    text-decoration: none;
     background-color: transparent;
 }
+
 #footer h5{
 	padding-left: 10px;
     border-left: 3px solid #eeeeee;
@@ -364,31 +365,12 @@ section .section-title {
     margin-bottom: 20px;
     color:#ffffff;
 }
+
 #footer a {
     color: #ffffff;
     text-decoration: none !important;
     background-color: transparent;
     -webkit-text-decoration-skip: objects;
-}
-#footer ul.social li{
-	padding: 3px 0;
-}
-#footer ul.social li a i {
-    margin-right: 5px;
-	font-size:25px;
-	-webkit-transition: .5s all ease;
-	-moz-transition: .5s all ease;
-	transition: .5s all ease;
-}
-
-#footer ul.social li a:hover{
-	color:#eeeeee;
-}
-#footer ul.quick-links li{
-	padding: 3px 0;
-	-webkit-transition: .5s all ease;
-	-moz-transition: .5s all ease;
-	transition: .5s all ease;
 }
 #footer ul.quick-links li:hover{
 	padding: 3px 0;
@@ -400,14 +382,4 @@ section .section-title {
 }
 #footer ul.quick-links li:hover a i {
     font-weight: 700;
-}
-
-
-@media (max-width:767px){
-	#footer h5 {
-    padding-left: 0;
-    border-left: transparent;
-    padding-bottom: 0px;
-    margin-bottom: 10px;
-}
 }
