corrigindo erros do cadacy

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -338,7 +338,7 @@ article .text-footer {
 /* footer */
 
 /* Footer */
-@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
+
 section {
     padding: 60px 0;
 }
@@ -368,7 +368,7 @@ section .section-title {
 
 #footer a {
     color: #ffffff;
-    text-decoration: none !important;
+    text-decoration: none;
     background-color: transparent;
     -webkit-text-decoration-skip: objects;
 }
