--- a/public/css/app.css
+++ b/public/css/app.css
@@ -362,7 +362,7 @@ a:hover.page-link {
 /* Footer */
 
 section {
-    padding: 60px 0;
+    padding: 30px 0 0 0;
 }
 
 section .section-title {
@@ -382,7 +382,6 @@ section .section-title {
 
 #footer h5{
 	padding-left: 10px;
-    border-left: 3px solid #eeeeee;
     padding-bottom: 6px;
     margin-bottom: 20px;
     color:#ffffff;
@@ -397,13 +396,13 @@ section .section-title {
 #footer ul.quick-links li:hover{
 	padding: 3px 0;
 	margin-left:5px;
-	font-weight:700;
+	font-weight:400;
 }
 #footer ul.quick-links li a i{
 	margin-right: 5px;
 }
 #footer ul.quick-links li:hover a i {
-    font-weight: 700;
+    font-weight: 200;
 }
 
 @media only screen and (max-width: 767px) {
