Ajustes na cor dos botoes so summernote.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -449,3 +449,9 @@ section .section-title {
     border-left: none;
   }
 }
+
+/* Summernote background dos botoes */
+.note-editor .btn {
+  background-color:var(--main-white);
+  color: var(--main-black);
+}
