--- a/resources/less/clndr.less
+++ b/resources/less/clndr.less
@@ -162,8 +162,7 @@
       {
         padding: 14px;
         color: #4f4f4f;
-        border-top: 1px solid @main-light;
-        border-bottom: 1px solid @main-light;
+        border: 1px solid @main-light;
       }
       .event-item + .event-item {
         border-top: 0px;
