--- a/public/css/style.css
+++ b/public/css/style.css
@@ -144,8 +144,8 @@ div.container div.visita-msg {
   background-color: var(--main-white);
 }
 
-.card.manage:hover {
-  background-color: #f5f5f5;
+.card.manage:hover, .card.manage:hover .card-header, .card.manage:hover .card-footer {
+  background-color: var(--main-light);
 }
 
 .card.manage div.card-header span {
@@ -429,6 +429,38 @@ section .section-title {
 
 #footer .container .row div + div {
   border-left: 1px solid var(--main-white);
+}
+
+/* cards da home */
+
+.home.card {
+  font-size: 1rem;
+  text-align: left;
+  height: 22em;
+}
+
+.home.card div.card-header {
+  height: 15em;
+  overflow: hidden;
+  padding: 0;
+}
+
+.home.card div.card-body {
+  margin: 1em;
+  padding: 0;
+  overflow: hidden;
+}
+
+.home.card div.card-footer {
+  border-top: 1px solid var(--main-light);
+  padding-left: 1em;
+  font-size: 0.75rem;
+}
+
+/* cards da home */
+
+.note-toolbar * {
+  all: unset;
 }
 
 @media only screen and (max-width: 767px) {
