--- a/resources/less/clndr.less
+++ b/resources/less/clndr.less
@@ -82,15 +82,12 @@
           width: 14.2857%;
           height: 66px;
           padding: 24px 0;
-
           text-align: center;
           color: #4f4f4f;
           background-color: @main-white;
           border-bottom: 2px solid @main-white;
-
           background-size: cover;
           background-position: center;
-
           display: flex;
           justify-content: center;
           align-items: center;
@@ -122,10 +119,8 @@
           background-color: @main-light;
           background-image: none;
         }
-
       }
     }
-
 
     .event-listing
     {
@@ -151,7 +146,7 @@
         top: 0;
 
         .x-button {
-          cursor: pointer
+          cursor: pointer;
         }
 
         .x-button:hover {
@@ -171,7 +166,7 @@
       {
         font-weight: 400;
       }
-    }  
+    }
     &.show-events {
       
       .clndr-grid {
