--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@
   --main-green: #00ad50;
   --main-dark-green: #009444;
   --main-black: #212529;
-  --main-white: #f8f9fa;
+  --main-white: #f8fafc;
   --main-light: #e8e8ee;
 }
 
@@ -34,9 +34,10 @@ nav.navbar {
   padding: 0;
 }
 
-/* Muda a cor de fundo da header */
+/* Muda a header */
 header {
-  background-color: #f4f4f4;
+  max-width: 1140px;
+  margin: 0 auto;
 }
 
 /* Barra de navegação do site */
