Melhoradas mensagens de sucesso

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -474,6 +474,24 @@ section .section-title {
   all: unset;
 }
 
+/* Alerts */
+
+.alert {
+  position: relative;
+  padding: 0.75rem 1.25rem;
+  margin-bottom: 1rem;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+  max-width: 760px;
+  margin: 0 auto;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.alert.alert-success {
+  border-color: var(--main-dark-green);
+}
+
 
 /* Summernote background dos botoes */
 .note-editor .btn {
