--- a/public/css/style.css
+++ b/public/css/style.css
@@ -479,11 +479,13 @@ section .section-title {
 .alert {
   position: relative;
   padding: 0.75rem 1.25rem;
-  margin-bottom: 1rem;
   border: 1px solid transparent;
   border-radius: 0.25rem;
   max-width: 760px;
-  margin: 0 auto;
+  margin-top: 0;
+  margin-bottom: 1rem;
+  margin-left: auto;
+  margin-right: auto;
   font-size: 1.5rem;
   font-weight: bold;
 }
